--- a/lab2/css/helloworld.css
+++ b/lab2/css/helloworld.css
@@ -14,7 +14,7 @@ h1, p {
 }
 p {
   color:  orange;
-  font-family:"Lucida Console", monospace;
+  font-family:"Royal Acidbath", arial;
 }
 h1 {
   color:  crimson;
